--- a/simple_linear_regression.ipynb
+++ b/simple_linear_regression.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Copy of simple_linear_regression.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/carnage2202/Regression/blob/main/simple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -647,6 +658,74 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Predicting the Salary according to experince"
+      ],
+      "metadata": {
+        "id": "hzrWIsCpCHJ9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(regressor.predict([[12]]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bmmh7NUiB2dV",
+        "outputId": "9313823b-5e47-4d49-dee4-df2a196c325f"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[137605.23485427]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(regressor.coef_)\n",
+        "print(regressor.intercept_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p3Rw44OaB6GH",
+        "outputId": "ae42bd98-f922-4a9d-ea29-a3a9cf8ef5f7"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[9332.94473799]\n",
+            "25609.89799835482\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "fA_RoIeaCFGE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
